Реализовал веб интерфейс, не полностью, но все же